bugapoint list now has a scrollbar

--- a/src/app/adminpanel-bugapointlist/adminpanel-bugapointlist.component.css
+++ b/src/app/adminpanel-bugapointlist/adminpanel-bugapointlist.component.css
@@ -1,5 +1,4 @@
 .updateButton {
-  background-color: greenyellow;
   color: greenyellow;
 
   margin-top: 0.8rem;
@@ -14,4 +13,7 @@ mat-expansion-panel mat-panel-description {
   margin-bottom: 1rem;
 }
 
-
+.bugapointlist {
+  overflow: auto;
+  height: 75vh;
+}
